--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,11 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
+  - jekyll-remote-theme  
 
 paginate: 3
 
 tags_path: /tags/
 categories_path: /categories/
-future: true
-theme: jekyll-theme-hydure
+
+remote_theme: zivong/jekyll-theme-hydure
