--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,12 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
-  - jekyll-remote-theme  
+#  - jekyll-remote-theme  
 
 paginate: 3
 
 tags_path: /tags/
 categories_path: /categories/
 
-remote_theme: zivong/jekyll-theme-hydure
+#remote_theme: zivong/jekyll-theme-hydure
+theme: jekyll-theme-hydure
